@@ -3,6 +3,7 @@
 {% block content %}
 <a href='upload'>Upload an image</a> |
 <a href='image'>Show most recent image</a>
+<a href='login'>Login or create account</a>
 <br>
 <img width=40% src='image_raw?special=latest'/>
 {% endblock %}
