@@ -1,0 +1,25 @@
+{% extends "base.html" %}
+
+{% block content %}
+<title>Login</title>
+<h1>ImageApp Login</h1>
+<form action='/do_login' method='POST'>
+    <p>User: <input type='text' name='username'></p>
+    <p>Password: <input type='password' name='password'></p>
+    <input type='submit' value='Login'>
+</form>
+
+<hr />
+<h2>Register User</h2>
+<form action='/register' method='POST'>
+    <p>User:     <input type='text' name='username'></p>
+    <p>Password: <input type='password' name='password'></p>
+    <p>Confirm:  <input type='password' name='confirm'></p>
+    <input type='submit' value='Create'>
+</form>
+<hr />
+
+<form action='/logout' method='POST'>
+    <input type='submit' value='Logout'>
+</form>
+{% endblock %}
