@@ -1,0 +1,2 @@
+<p>Account successfully created!
+<a href="/">return to index</a></p>
