@@ -16,6 +16,7 @@ playback and recording of all WSGI traffic between server and component.
 
 
 
+
 2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>
 
 * Initialized repository, created server.py and README.
@@ -25,4 +26,11 @@ playback and recording of all WSGI traffic between server and component.
 
 *For HW 9 I did project 12 and implemented AJAX image upload with JQuery.
 
-Testing push.
+
+2014-04-10 Omar Ali
+*For HW 10 I implmented the user login and authentication version 1. I plan to
+change this later using the SQLite database. But for now in the image app you
+can create a user and login and it will check if the user is already created.
+The images are uploaded to the user so they are mapped by user.
+
+
